baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_throw_regressions/baml_tests__diagnostic_errors__catch_throw_regressions__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 41142
---
=== PPIR ===
class user.BuildError {
  reason: string
}
class user.BuildError$stream {
  reason: string | null
}
enum user.Status {HttpError, IndexError, AuthError, SomeOtherError}
function user.AlwaysThrowsStatus(n: int) -> user.Status  [expr] {
  {  } match (n) { 0 => throw "http_error", _ => throw 404 }
}
function user.BuildWithBuildError(ok: bool) -> string  [expr] {
  {  } GenerateWithBuildError(ok)
}
function user.CatchAllMissingString(ok: bool) -> string  [expr] {
  {  } BuildWithBuildError(ok) catch_all (e) { user.BuildError => "recovered: " Add e.reason }
}
function user.CatchAllStatusVariants(n: int) -> string  [expr] {
  {  } ThrowsAllStatusVariants(n) catch (e) { user.Status.HttpError => "http!" } catch (e) { user.Status.IndexError => "index!" } catch (e) { user.Status.AuthError => "auth!" } catch (e) { user.Status.SomeOtherError => "other!" }
}
function user.CatchAlwaysThrows(n: int) -> string  [expr] {
  {  } WrapperAlwaysThrows(n) catch (e) { string => "http!" } catch (e2) { int => "index!" }
}
function user.CatchRecursiveThrow(n: int) -> string  [expr] {
  {  } RecB(n) catch (e) { string => "handled" }
}
function user.GenerateWithBuildError(ok: bool) -> string  [expr] {
  { if (Not ok) { throw user.BuildError { reason: "generate failed" } }; if (ok) { throw "string" } } "ok"
}
function user.RecA(n: int) -> string  [expr] {
  {  } match (n) { 0 => throw "boom", _ => RecB(n) }
}
function user.RecB(n: int) -> string  [expr] {
  {  } RecA(n)
}
function user.ThrowsAllStatusVariants(n: int) -> user.Status  [expr] {
  {  } match (n) { 1 => throw Status.HttpError, 2 => throw Status.IndexError, 3 => throw Status.AuthError, _ => throw Status.SomeOtherError }
}
function user.UnreachableTailStillChecked() -> string  [expr] {
  {  } { throw "error"; let x = 123 } x.missing
}
function user.WrapperAlwaysThrows(n: int) -> user.Status  [expr] {
  {  } AlwaysThrowsStatus(n)
}
