baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_throw_regressions/baml_tests__diagnostic_errors__catch_throw_regressions__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0001

  × mismatched types
    ╭─[regressions.baml:25:5]
 25 │     WrapperAlwaysThrows(n) catch (e) {
    ·     ───────────┬──────────
    ·                ╰── expected `string`, found `Status`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[regressions.baml:43:5]
 43 │     ThrowsAllStatusVariants(n) catch (e) {
    ·     ─────────────┬────────────
    ·                  ╰── expected `string`, found `Status`
    ╰────

  [type] E0146

  ⚠ unreachable code: 2 statement(s) after diverging statement
     ╭─[regressions.baml:102:9]
 102 │         let x = 123;
     ·         ────────────
     ╰────

  [type] E0007

  × type `int` has no member `missing`
     ╭─[regressions.baml:103:9]
 103 │         x.missing
     ·         ─────────
     ╰────
